--- a/www/style.css
+++ b/www/style.css
@@ -1,11 +1,18 @@
 :root {
   font-size: 16px;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
+  --stmsnz-blue: #007cbc;
   --text-primary: #b6b6b6;
   --text-secondary: #ececec;
   --bg-primary: #23232e;
   --bg-secondary: #141418;
   --transition-speed: 600ms;
+}
+
+main {
+  /* margin: 0 auto; */
+  margin-left: 6rem;
+  padding: 1rem;
 }
 
 body {
@@ -25,4 +32,85 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background: #6649b8;
+}
+
+header {
+  height: 15vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+header img {
+  height: 100%;
+  margin: auto 0;
+}
+
+header h1 {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 6rem;
+  margin: 0;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr [col-start]);
+  grid-template-rows: repeat(5, 1fr [row-start]);
+}
+
+.grid-item {
+  padding: 2%;
+}
+
+.image-gallery {
+  margin: 5rem auto 0 auto;
+  max-width: 1200px;
+}
+
+.image-gallery figure {
+  margin: 0;
+  box-shadow: 0 0 0px #888888;
+  transition: var(--transition-speed);
+}
+
+.image-gallery figure:hover {
+  box-shadow: 5px 5px 8px #333333;
+}
+
+.image-gallery img {
+  display: inline;
+  width: 100%;
+}
+
+h2 {
+  font-size: 4rem;
+}
+
+/* Small screens */
+@media only screen and (max-width: 600px) {
+  header {
+    display: block;
+    /* text-align: center; */
+    height: auto;
+  }
+
+  header img {
+      display: block;
+    margin: 0 auto;
+    height: 12vh;
+  }
+
+  header h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+}
+
+/* Large screens */
+@media only screen and (min-width: 600px) {
 }
