--- a/www/style.css
+++ b/www/style.css
@@ -77,8 +77,23 @@ h2 {
     font-size: 4rem;
   }
 
-  main {
-      margin: 0 auto;
+  h2 {
+    font-size: 3rem;
+  }
+
+  p,
+  ul {
+    font-size: 2rem;
+    text-align: left;
+  }
+
+  #landing h1 {
+    text-align: center;
+    font-size: 50px;
+    color: white;
+  }
+  #landing img {
+    width: 80vmin;
   }
 
   h2 {
