--- a/www/style.css
+++ b/www/style.css
@@ -59,6 +59,83 @@ h2 {
   font-size: 4rem;
 }
 
+h3 {
+  font-size: 3rem;
+}
+
+p,
+ul {
+  font-size: 2rem;
+  text-align: justify;
+}
+
+.flex-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch;
+  flex-wrap: wrap;
+  gap: 5vw;
+}
+
+.flex-row > div {
+  flex-basis: 100%;
+  flex: 1;
+  min-width: 500px;
+}
+
+.staff-profile {
+  width: 100%;
+  height: 100%;
+  margin: 1rem auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  background-color: var(--text-secondary);
+}
+
+.flex-row > .staff-container {
+  flex-basis: 0;
+  flex: 0;
+}
+
+.staff-profile img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.staff-profile h3 {
+  margin: 1rem;
+}
+
+#landing {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1vw;
+  padding: 2%;
+  background-image: url("images/gallery/Levels-of-Temporary-Traffic-Management-TTM.jpg");
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: multiply;
+  background-position: center;
+  background-size: cover;
+}
+
+#landing h1 {
+  text-align: center;
+  font-size: 70px;
+  color: white;
+}
+#landing img {
+  display: block;
+  width: 500px;
+}
+
 /* Small screens */
 @media only screen and (max-width: 600px) {
   header {
