--- a/www/nav-style.css
+++ b/www/nav-style.css
@@ -7,6 +7,7 @@
   background-color: var(--bg-primary);
   transition: width 600ms ease;
   overflow: scroll;
+  z-index: 1;
 }
 
 .navbar-nav {
@@ -86,7 +87,7 @@
 }
 
 /* Small screens */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   .navbar {
     bottom: 0;
     width: 100vw;
@@ -112,11 +113,11 @@
 }
 
 /* Large screens */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 700px) {
   .navbar {
     top: 0;
     width: 5rem;
-    height: 100vh;
+    height: 110vh;
   }
 
   .navbar:hover {
