--- a/www/style.css
+++ b/www/style.css
@@ -1,7 +1,7 @@
 :root {
   font-size: 16px;
   font-family: "Open Sans";
-  --stmsnz-blue: #007cbc;
+  --stmsnz-blue: 0, 124, 188;
   --text-primary: #b6b6b6;
   --text-secondary: #ececec;
   --bg-primary: #23232e;
@@ -10,7 +10,6 @@
 }
 
 main {
-  /* margin: 0 auto; */
   margin-left: 6rem;
   padding: 1rem;
 }
@@ -35,15 +34,16 @@ body::-webkit-scrollbar-thumb {
 }
 
 header {
-  height: 15vh;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  gap: 2vw;
+  padding: 0 0 5vh 0;
 }
 
 header img {
-  height: 100%;
+  height: 15vh;
   margin: auto 0;
 }
 
@@ -53,7 +53,6 @@ header h1 {
   font-size: 6rem;
   margin: 0;
 }
-
 
 h2 {
   font-size: 4rem;
@@ -137,7 +136,7 @@ ul {
 }
 
 /* Small screens */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   header {
     display: block;
     /* text-align: center; */
@@ -147,7 +146,14 @@ ul {
   header img {
     display: block;
     margin: 0 auto;
-    height: 12vh;
+  }
+
+  main {
+    margin: 0 auto 5rem auto;
+  }
+
+  header {
+    margin: 0;
   }
 
   header h1 {
@@ -173,11 +179,15 @@ ul {
     width: 80vmin;
   }
 
-  h2 {
-    font-size: 3rem;
+  .staff-profile {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
 /* Large screens */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 700px) {
+  #landing {
+    height: 60vh;
+  }
 }
